# doi2yaml

./: LICENSE  pyproject.toml
doi2yaml/: __init__.py  cli.py  doi2yaml.py  functions.py  parser.py  processors.py  result.py
src/: __init__.py  cli.py  doi2yaml.py
tests/: conftest.py  test_functions.py  test_parser.py  test_result.py
tests/files/: test_0.json  test_1.json  test_2.json  test_3.json  test_all.json  test_answer_0.yaml  test_answer_1.yaml  test_answer_2.yaml  test_answer_3.yaml
